core: move parts of the main Makefile to libs/Makefile

--- a/core/src/Makefile.am
+++ b/core/src/Makefile.am
@@ -17,6 +17,8 @@
 
 SUBDIRS = . test
 
+include ../common.mk
+
 ################################################################################
 # General
 ################################################################################
@@ -39,8 +41,6 @@ bin_PROGRAMS           =
 EXTRA_DIST             =
 MOSTLYCLEANFILES       =
 
-QUIET ?= true
-
 if CONFIG_DEBUG
 CFLAGS ?= -Wall -g
 else
@@ -55,20 +55,6 @@ INCLUDES = -I$(top_srcdir) -I$(top_builddir)
 
 AM_MAKEFLAGS     =
 AM_LIBTOOLFLAGS  =
-
-# HACK: automake doesn't support ifeq, but will ignore it if it doesn't start
-# at column 0
- ifeq ($(strip $(QUIET)),true)
-	Q = @
-	OUTPUT = > /dev/null
-	infmsg = printf "  %-7s %s\n" $(1) $(2)
-	AM_MAKEFLAGS    += --silent
-	AM_LIBTOOLFLAGS += --silent
- else
-	OUTPUT =
-	Q =
-	infmsg = :
- endif
 
 BUILT_SOURCES   += fbsplash.h
 
@@ -93,7 +79,7 @@ doc:
 
 nodist_include_HEADERS  += fbsplash.h
 
-EXTRA_DIST              += fbsplash.h.in klibc_compat.h
+EXTRA_DIST              += fbsplash.h.in
 
 MOSTLYCLEANFILES        += fbsplash.h
 
@@ -240,52 +226,21 @@ fbcondecor_helper_CFLAGS    = -Os -w -ffunction-sections -fdata-sections -I.@am_
 fbcondecor_helper_LDFLAGS   = 
 fbcondecor_helper_LDADD     = 
 fbcondecor_helper_CFLAGS   += -I$(abs_top_builddir)/libjpeg -I$(LIBJPEG_SOURCE)
-fbcondecor_helper_LDADD    +=  libjpeg.a
+fbcondecor_helper_LDADD    += $(top_builddir)/libs/libjpeg.a
 if CONFIG_PNG
 fbcondecor_helper_CFLAGS   += -I$(LIBPNG_SOURCE)
-fbcondecor_helper_LDADD    += libpng.a libz.a
+fbcondecor_helper_LDADD    += $(top_builddir)/libs/libpng.a $(top_builddir)/libs/libz.a
 endif
 if CONFIG_TTF_KERNEL
 fbcondecor_helper_SOURCES  += ttf.c ttf.h fbsplash.h
 fbcondecor_helper_CFLAGS   += -I$(LIBFREETYPE2_SOURCE)/include -I$(LIBZ_SOURCE)
-fbcondecor_helper_LDADD    += libfreetype.a
+fbcondecor_helper_LDADD    += $(top_builddir)/libs/libfreetype.a
 endif
 if CONFIG_KLIBC_SHARED
 fbcondecor_helper_LDFLAGS  += -shared
 else
 fbcondecor_helper_LDFLAGS  += -static
 endif
-
-EXTRA_DIST += \
-	$(LIBFREETYPE2_SOURCE_INTERNAL) \
-	$(LIBJPEG_SOURCE_INTERNAL) \
-	$(LIBPNG_SOURCE_INTERNAL) \
-	$(LIBZ_SOURCE_INTERNAL)
-
-mostlyclean-local-kernel: \
-		mostlyclean-local-kernel-libfreetype \
-		mostlyclean-local-kernel-libjpeg \
-		mostlyclean-local-kernel-libpng \
-		mostlyclean-local-kernel-libz
-
-# Don't pass command line variables when calling make.
-# This saves us trouble when building against klibc.
-MAKEOVERRIDES=
-
-LIBFREETYPE2_SOURCE_INTERNAL = libs/freetype-2.3.5
-LIBJPEG_SOURCE_INTERNAL      = libs/jpeg-6b
-LIBPNG_SOURCE_INTERNAL       = libs/libpng-1.2.18
-LIBZ_SOURCE_INTERNAL         = libs/zlib-1.2.3
-
-# Flags for the kernel utilities
-K_CFLAGS = -Os -w -ffunction-sections -fdata-sections \
-			-DWITH_ERRLIST -DTARGET_KERNEL -DTT_CONFIG_OPTION_BYTECODE_INTERPRETER
-
-PNGDEFS = -DPNG_NO_WRITE_TIME -DPNG_NO_FLOATING_POINT_SUPPORTED -DPNG_NO_WRITE_SUPPORTED -DPNG_NO_READ_iTXt \
-		-DPNG_LEGACY_SUPPORTED -DPNG_NO_PROGRESSIVE_READ -DPNG_NO_MNG_FEATURES -DPNG_NO_CONSOLE_IO \
-		-DPNG_NO_ERROR_NUMBERS -DPNG_READ_GRAY_TO_RGB_SUPPORTED -DPNG_READ_16_TO_8_SUPPORTED \
-		-DPNG_READ_STRIP_ALPHA_SUPPORTED -DPNG_NO_INFO_IMAGE -DPNG_NO_READ_TRANSFORMS -DPNG_NO_READ_ANCILLARY_CHUNKS \
-		-DPNG_NO_MMX_CODE
 
 # Override automake's generation of target rules for building fbcondecor_helper.
 fbcondecor_helper: $(fbcondecor_helper_LDADD) $(fbcondecor_helper_OBJECTS)
@@ -310,109 +265,3 @@ fbcondecor_helper-%.o: %.c
 	@$(call infmsg,CC,$@)
 	$(Q)$(MKDIR_P) $(@D)
 	$(Q)$(KLCC) $(fbcondecor_helper_CPPFLAGS) $(fbcondecor_helper_CFLAGS) $(INCLUDES) -c $< -o $@
-
-libfreetype.a: klibc_compat.h
-	$(Q)$(MKDIR_P) $(abs_top_builddir)/libfreetype
-	$(Q)cd $(abs_top_builddir)/libfreetype ; \
-	if test ! -e ./config.mk ; then \
-		$(call infmsg,CONF,libfreetype.a) ; \
-		CFLAGS="$(K_CFLAGS) -include $(abs_top_srcdir)/src/klibc_compat.h" \
-		CC="$(KLCC)" CPPFLAGS="-I$(LIBZ_SOURCE)" \
-		$(LIBFREETYPE2_SOURCE)/configure --host=$(host) --build=$(build_triplet) --disable-shared $(OUTPUT) ; \
-	fi ; \
-	if ! $(MAKE) --question $(AM_MAKEFLAGS) CFLAGS="$(K_CFLAGS)" library ; then \
-		$(call infmsg,MAKE,libfreetype.a) ; \
-	fi ; \
-	$(MAKE) $(AM_MAKEFLAGS) CFLAGS="-c $(K_CFLAGS)" CCexe="$(BUILD_CC)" library $(OUTPUT)
-	$(Q)$(MKDIR_P) $(@D)
-	$(Q)cp -f $(abs_top_builddir)/libfreetype/.libs/libfreetype.a $@
-
-libjpeg.a:
-	$(Q)$(MKDIR_P) $(abs_top_builddir)/libjpeg
-	$(Q)cd $(abs_top_builddir)/libjpeg ; \
-	if test ! -e ./Makefile ; then \
-		$(call infmsg,CONF,libjpeg.a) ; \
-		CC=$(KLCC) CFLAGS="$(K_CFLAGS) -I$(abs_top_builddir)/libjpeg" $(LIBJPEG_SOURCE)/configure \
-		--host=$(host) --build=$(build_triplet) $(OUTPUT) ; \
-		echo "#define NO_GETENV 1" >> jconfig.h ; \
-		$(SED) -i "s#CFLAGS=.*#CFLAGS=$(K_CFLAGS) -I$(abs_top_builddir)/libjpeg#" Makefile ; \
-		$(SED) -i "s:#define JMESSAGE.*::" $(LIBJPEG_SOURCE)/jerror.c ; \
-	fi ; \
-	if ! $(MAKE) --question $(AM_MAKEFLAGS) CC="$(KLCC)" libjpeg.a ; then  \
-		$(call infmsg,MAKE,libjpeg.a) ; \
-	fi ; \
-	$(MAKE) $(AM_MAKEFLAGS) CC="$(KLCC)" libjpeg.a $(OUTPUT)
-	$(Q)$(MKDIR_P) $(@D)
-	$(Q)cp -f $(abs_top_builddir)/libjpeg/libjpeg.a $@
-
-libpng.a: libz.a
-	$(Q)cd $(LIBPNG_SOURCE) ; \
-	if test ! -e ./Makefile ; then \
-		$(call infmsg,CONF,libpng.a) ; \
-		cp scripts/makefile.linux Makefile $(OUTPUT); \
-		$(SED) -i -e '/^CFLAGS/ { N ; s#^CFLAGS=.*#CFLAGS=$(K_CFLAGS) $(PNGDEFS)# ; P ; D }' \
-		       -e 's#^ZLIBINC=.*#ZLIBINC=$(LIBZ_SOURCE)#' \
-		       -e 's#^ZLIBLIB=.*#ZLIBLIB=$(LIBZ_SOURCE)#' Makefile ; \
-	fi ; \
-	if ! $(MAKE) --question $(AM_MAKEFLAGS) CC="$(KLCC)" AR_RC="$(AR) rc" RANLIB="$(RANLIB)" libpng.a ; then \
-		$(call infmsg,MAKE,libpng.a) ; \
-	fi ; \
-	$(MAKE) $(AM_MAKEFLAGS) CC="$(KLCC)" AR_RC="$(AR) rc" RANLIB="$(RANLIB)" libpng.a $(OUTPUT)
-	$(Q)$(MKDIR_P) $(@D)
-	$(Q)cp -f $(LIBPNG_SOURCE)/libpng.a $@
-
-libz.a:
-	$(Q)cd $(LIBZ_SOURCE) ; \
-	if test ! -e ./Makefile ; then \
-		$(call infmsg,CONF,libz.a) ; \
-		CC=$(KLCC) CFLAGS="$(K_CFLAGS)" \
-		./configure $(OUTPUT); \
-		$(SED) -i 's#^CFLAGS=\(.*\)#CFLAGS=\1 $(K_CFLAGS)#' Makefile ; \
-	fi ; \
-	if ! $(MAKE) --question $(AM_MAKEFLAGS) CC="$(KLCC)" AR="$(AR) rc" RANLIB="$(RANLIB)" libz.a ; then \
-		$(call infmsg,MAKE,zlib.a) ; \
-	fi ; \
-	$(MAKE) $(AM_MAKEFLAGS) CC="$(KLCC)" AR="$(AR) rc" RANLIB="$(RANLIB)" libz.a $(OUTPUT)
-	$(Q)$(MKDIR_P) $(@D)
-	$(Q)cp -f  $(LIBZ_SOURCE)/libz.a $@
-
-mostlyclean-local-kernel-libfreetype:
-	$(Q)$(MKDIR_P) libfreetype
-	$(Q)cd libfreetype ; \
-	if test -e ./config.mk ; then \
-		$(call infmsg,CLEAN,libfreetype.a) ; \
-		$(MAKE) $(AM_MAKEFLAGS) clean $(OUTPUT) ; \
-		rm -f config.mk ; \
-	fi
-	$(Q)rm -fr libfreetype
-	$(Q)rm -f  libfreetype.a
-
-mostlyclean-local-kernel-libjpeg:
-	$(Q)$(MKDIR_P) libjpeg
-	$(Q)cd libjpeg ; \
-	if test -e Makefile ; then \
-		$(call infmsg,CLEAN,libjpeg.a) ; \
-		$(MAKE) $(AM_MAKEFLAGS) clean $(OUTPUT) ; \
-		rm -f Makefile ; \
-	fi
-	$(Q)rm -fr libjpeg
-	$(Q)rm -f  libjpeg.a
-
-mostlyclean-local-kernel-libpng:
-	$(Q)cd $(LIBPNG_SOURCE) ; \
-	if test -e Makefile ; then \
-		$(call infmsg,CLEAN,libpng.a) ; \
-		$(MAKE) $(AM_MAKEFLAGS) clean $(OUTPUT) ; \
-		rm -f Makefile ; \
-	fi
-	$(Q)rm -f  libpng.a
-
-mostlyclean-local-kernel-libz:
-	$(Q)cd $(LIBZ_SOURCE) ; \
-	if test -e Makefile ; then \
-		$(call infmsg,CLEAN,libz.a) ; \
-		$(MAKE) $(AM_MAKEFLAGS) clean $(OUTPUT) ; \
-		rm -f Makefile ; \
-	fi
-	$(Q)rm -f  libz.a
-
