--- a/core/misc/Makefile.am
+++ b/core/misc/Makefile.am
@@ -5,13 +5,15 @@ endif
 
 EXTRA_DIST 		= avg.sh
 
-benchmark_SOURCES  = benchmark.c $(top_builddir)/fbsplash.h
+BUILT_SOURCES = $(top_builddir)/src/fbsplash.h
+
+benchmark_SOURCES  = benchmark.c $(top_builddir)/src/fbsplash.h
 benchmark_LDADD    = $(top_builddir)/src/libfbsplashrender.la $(top_builddir)/src/libfbsplash.la
 blittest_SOURCES   = blittest.c
 blittest_LDADD     =
-inputtest_SOURCES  = inputtest.c $(top_builddir)/fbsplash.h
+inputtest_SOURCES  = inputtest.c $(top_builddir)/src/fbsplash.h
 inputtest_LDADD    = $(top_builddir)/src/libfbsplashrender.la $(top_builddir)/src/libfbsplash.la
-splashtest_SOURCES = splashtest.c $(top_builddir)/fbsplash.h
+splashtest_SOURCES = splashtest.c $(top_builddir)/src/fbsplash.h
 splashtest_LDADD   = $(top_builddir)/src/libfbsplashrender.la $(top_builddir)/src/libfbsplash.la
 
 clean-local:
