--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -1,4 +1,3 @@
-# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
 # Author:     Michal Januszewski <spock@gentoo.org>
@@ -33,6 +32,7 @@ splash_setup() {
 		return 0
 	fi
 
+	export SPLASH_EFFECTS=""
 	export SPLASH_MODE_REQ="off"
 	export SPLASH_PROFILE="off"
 	export SPLASH_THEME="default"
@@ -42,6 +42,7 @@ splash_setup() {
 	export SPLASH_SHUTDOWN_MESSAGE="Shutting down the system (\$progress%)... Press F2 for verbose mode."
 	export SPLASH_REBOOT_MESSAGE="Rebooting the system (\$progress%)... Press F2 for verbose mode."
 
+	[ -f @sysconfdir@/splash/splash ] && . @sysconfdir@/splash/splash
 	[ -f @sysconfdir@/conf.d/splash ] && . @sysconfdir@/conf.d/splash
 	[ -f @sysconfdir@/conf.d/fbcondecor ] && . @sysconfdir@/conf.d/fbcondecor
 
@@ -88,6 +89,8 @@ splash_comm_send() {
 	if [ ! -e "${spl_pidfile}" ]; then
 		return 1
 	fi
+
+	splash_profile "comm $*"
 
 	if [ -r /proc/$(<"${spl_pidfile}")/status -a \
 		  "$( (read t;echo ${t} | sed -e 's/Name: //') </proc/$(<${spl_pidfile})/status)" = "splash_util.sta" ]; then
@@ -137,6 +140,37 @@ splash_silent() {
 	splash_comm_send "set mode silent"
 }
 
+# Saves profiling information
+splash_profile() {
+	if [ "${SPLASH_PROFILE}" = "on" ]; then
+		echo "$(cat /proc/uptime | cut -f1 -d' '): $*" >> "${spl_cachedir}/profile"
+	fi
+}
+
+# Set the input device if it exists. This will make it possible to use F2 to
+# switch from verbose to silent.
+splash_set_event_dev() {
+	local t="$(grep -Hsi keyboard /sys/class/input/input*/name | sed -e 's#.*input\([0-9]*\)/name.*#event\1#')"
+	if [ -z "${t}" ]; then
+		t="$(grep -Hsi keyboard /sys/class/input/event*/device/driver/description | grep -o 'event[0-9]\+')"
+		if [ -z "${t}" ]; then
+			for i in /sys/class/input/input* ; do
+				if [ "$((0x$(cat $i/capabilities/ev) & 0x100002))" = "1048578" ]; then
+					t="$(echo $i | sed -e 's#.*input\([0-9]*\)#event\1#')"
+				fi
+			done
+
+			if [ -z "${t}" ]; then
+				# Try an alternative method of finding the event device. The idea comes
+				# from Bombadil <bombadil(at)h3c.de>. We're couting on the keyboard controller
+				# being the first device handled by kbd listed in input/devices.
+				t="$(/bin/grep -s -m 1 '^H: Handlers=kbd' /proc/bus/input/devices | grep -o 'event[0-9]*')"
+			fi
+		fi
+	fi
+	[ -n "${t}" ] && splash_comm_send "set event dev /dev/input/${t}"
+}
+
 ###########################################################################
 # Service list
 ###########################################################################
@@ -163,8 +197,15 @@ if [ -n "${BASH}" ]; then
 	export -f chvt
 	export -f splash_verbose
 	export -f splash_silent
+	export -f splash_profile
+	export -f splash_set_event_dev
 	export -f splash_svclist_get
 fi
+
+# Load any supplemental splash functions.
+for i in /sbin/splash-functions-*.sh ; do
+	[ -r "${i}" ] && . "${i}"
+done
 
 splash_setup
 
