--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -6,7 +6,8 @@
 # This file is a part of splashutils. The functions contained in this
 # file are meant to be used by hook scripts in splash themes or by
 # initscript systems. The code will be kept distro-agnostic to facilitate
-# portability.
+# portability. It should also contain POSIX compatible code. No bashisms
+# allowed!
 
 # ####################################################################
 #    Change any settings ONLY if you are sure what you're doing.
@@ -15,16 +16,20 @@
 
 # The splash scripts need a cache which can be guaranteed to be
 # both readable and writable at all times, even when the root fs
-# is mounted read-only. This writable space is provided by a tmpfs
-# mounted at ${spl_cachedir}.
-export spl_util="@bindir@/splash_util.static"
-export spl_daemon="@sbindir@/fbsplashd.static"
-export spl_decor="@sbindir@/fbcondecor_ctl.static"
-export spl_bindir="@libdir@/splash/bin"
+# is mounted read-only. To that end, an in-RAM fs is used. Valid
+# values for spl_cachetype are 'tmpfs' and 'ramfs'. spl_cachesize
+# is a size limit in KB, and it should probably be left with the
+# default value.
+export spl_cachesize="4096"
+export spl_cachetype="tmpfs"
 export spl_cachedir="@libdir@/splash/cache"
 export spl_tmpdir="@libdir@/splash/tmp"
 export spl_fifo="${spl_cachedir}/.splash"
 export spl_pidfile="${spl_cachedir}/daemon.pid"
+export spl_util="@bindir@/splash_util.static"
+export spl_daemon="@sbindir@/fbsplashd.static"
+export spl_decor="@sbindir@/fbcondecor_ctl.static"
+export spl_bindir="@libdir@/splash/bin"
 
 # This is the main function which handles all events.
 # Accepted parameters:
@@ -235,6 +240,57 @@ splash_start() {
 	return 0
 }
 
+###########################################################################
+# Cache-related functions
+###########################################################################
+
+splash_cache_prep() {
+	# Mount an in-RAM filesystem at spl_cachedir
+	mount -ns -t "${spl_cachetype}" cachedir "${spl_cachedir}" \
+		-o rw,mode=0644,size="${spl_cachesize}"k
+
+	retval="$?"
+
+	if [ ${retval} -ne 0 ]; then
+		splash_err "Unable to create splash cache - switching to verbose."
+		splash_verbose
+		return "${retval}"
+	fi
+}
+
+# args: list of files to save when the cache is umounted
+#       Note that the 'profile' file is already handled and thus shouldn't
+#       be included in the list.
+splash_cache_cleanup() {
+	# Don't try to clean anything up if the cachedir is not mounted.
+	[ -z "$(grep ${spl_cachedir} /proc/mounts)" ] && return;
+
+	# Create the temp dir if necessary.
+	if [ ! -d "${spl_tmpdir}" ]; then
+		mkdir -p "${spl_tmpdir}" 2>/dev/null
+		[ "$?" != "0" ] && return
+	fi
+
+	# If /etc is not writable, don't update /etc/mtab. If it is
+	# writable, update it to avoid stale mtab entries (bug #121827).
+	local mntopt=""
+	[ -w /etc/mtab ]] | mntopt="-n"
+	mount ${mntopt} --move "${spl_cachedir}" "${spl_tmpdir}" 2>/dev/null
+
+	# Don't try to copy anything if the cachedir is not writable.
+	[ -w "${spl_cachedir}" ] || return
+
+	if [ "${SPLASH_PROFILE}" != "off" ]; then
+		cp -a "${spl_tmpdir}/profile" "${spl_cachedir}" 2>/dev/null
+	fi
+
+	while [ -n "$1" ]; do
+		cp -a "${spl_tmpdir}/$1" "${spl_cachedir}" 2>/dev/null
+		shift
+	done
+
+	umount -l "${spl_tmpdir}" 2>/dev/null
+}
 
 ###########################################################################
 # Common functions
@@ -428,12 +484,52 @@ splash_warn() {
 	echo "$*"
 }
 
-splash_init() {
-	# Dummy.
+splash_err() {
+	echo "$*"
 }
 
+############################################################################
+# Functions to be overridden by distro-specific code
+###########################################################################
+
+# args: <internal_runlevel> <runlevel>
+#
+# This function is called when an 'rc_init' event takes place,
+# i.e. when the runlevel is changed.
+
+# It is normally used to initialize any internal splash-related 
+# variables (e.g. ones used to track the boot progress), calculate
+# and save the service list and call `splash_start` in appropriate 
+# runlevels.
+#
+# Note that the splash cache is already intialized when this
+# function is called.
+splash_init() {
+	if [ "$2" = "6" -o "$2" = "0" -o "$2" = "S" -a "$1" = "sysinit" ]; then
+		splash_start
+	fi
+}
+
+# args: <runlevel>
+#
+# This function is called when an 'rc_exit' event takes place,
+# i.e. at the end of processes all initscript from a runlevel.
 splash_exit() {
-	# Dummy.
+	# If we're in sysinit or rebooting, do nothing.
+	[ "$1" = "S" -o "$1" = "6" -o "$1" = "0" ] && return 0
+
+	splash_comm_send "exit"
+	splash_cache_cleanup
+}
+
+# args: <svc>
+#
+# This function is called whenever the progress variable should be
+# updated.  It should recalculate the progress and send it to the
+# splash daemon.
+splash_update_progress() {
+	# splash_comm_send "progress ${progress}"
+	# splash_comm_send "paint"
 }
 
 # Export functions if we're running bash.
@@ -442,6 +538,8 @@ if [ -n "${BASH}" ]; then
 	export -f splash_setup
 	export -f splash_get_boot_message
 	export -f splash_start
+	export -f splash_cache_prep
+	export -f splash_cache_cleanup
 	export -f splash_comm_send
 	export -f splash_get_mode
 	export -f chvt
