core: POSIX sh doesn't like empty functions

--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -530,6 +530,7 @@ splash_exit() {
 splash_update_progress() {
 	# splash_comm_send "progress ${progress}"
 	# splash_comm_send "paint"
+	return
 }
 
 # Export functions if we're running bash.
