--- a/core/scripts/splash-functions.sh.in
+++ b/core/scripts/splash-functions.sh.in
@@ -81,8 +81,8 @@ splash() {
 	splash_profile "pre ${event} ${args}"
 
 	# Handle -pre event hooks
-	if [ -x "@sysconfdir@/splash/${SPLASH_THEME}/scripts/${event}-pre" ]]; then
-		@sysconfdir@/splash/${SPLASH_THEME}/scripts/${event}-pre ${args}
+	if [ -x "@sysconfdir@/splash/${SPLASH_THEME}/scripts/${event}-pre" ]; then
+		@sysconfdir@/splash/"${SPLASH_THEME}"/scripts/${event}-pre ${args}
 	fi
 
 	case "$event" in
@@ -101,7 +101,7 @@ splash() {
 
 	# Handle -post event hooks
 	if [ -x "@sysconfdir@/splash/${SPLASH_THEME}/scripts/${event}-post" ]; then
-		@sysconfdir@/splash/${SPLASH_THEME}/scripts/${event}-post ${args}
+		@sysconfdir@/splash/"${SPLASH_THEME}"/scripts/${event}-post ${args}
 	fi
 
 	return 0
@@ -178,7 +178,7 @@ splash_start() {
 	# on tty1. This can cause a lot of problems if it's not handled correctly, so
 	# we don't allow silent splash to run on incorrectly configured systems.
 	if [ "${SPLASH_MODE_REQ}" = "silent" -a "${SPLASH_SANITY}" != "insane" ]; then
-		if [ -z "$(grep -E '(^| )CONSOLE=/dev/tty1( |$)' /proc/cmdline)" -a
+		if [ -z "$(grep -E '(^| )CONSOLE=/dev/tty1( |$)' /proc/cmdline)" -a \
 			 -z "$(grep -E '(^| )console=tty1( |$)' /proc/cmdline)" ]; then
 			clear
 			splash_warn "You don't appear to have a correct console= setting on your kernel"
