--- a/misc/Makefile
+++ b/misc/Makefile
@@ -2,13 +2,9 @@ SUBDIRS = fbtruetype kbd
 LIB		?= lib
 STRIP	= strip
 
-all:	fbres usleep
+all:	fbres
 
 fbres:
-	$(CC) $(CFLAGS) $(LDFLAGS) $@.c -o $@
-	$(STRIP) $@
-
-usleep:
 	$(CC) $(CFLAGS) $(LDFLAGS) $@.c -o $@
 	$(STRIP) $@
 
@@ -17,10 +13,9 @@ usleep:
 
 clean:
 	@set -e; for d in $(SUBDIRS); do $(MAKE) -C $$d $@; done
-	@rm -f *.o fbres usleep
+	@rm -f *.o fbres
 
 install:
 	install -D fbres $(DESTDIR)/$(LIB)/splash/bin/fbres
-	install -D usleep $(DESTDIR)/$(LIB)/splash/bin/usleep
 	@set -e; for d in $(SUBDIRS); do $(MAKE) -C $$d $@; done
 
